# yweb-core

./: .gitignore  LICENSE  README.md  TEST_DOCS.md  TEST_ISOLATION_TESTING_GUIDE.md  TEST_REVIEW_CHECKLIST.md  TODO.md  pyproject.toml  requirements.txt
.cursor/rules/: RULES_INDEX.md  yweb-infra.mdc
.cursor/skills/yweb-auth/: SKILL.md
.cursor/skills/yweb-ddd-architecture/: SKILL.md
.cursor/skills/yweb-infra/: SKILL.md
.cursor/skills/yweb-orm/: SKILL.md
TODO/: 21_lightweight_domain_events_and_ownsone_design.md  API_FIRST_DATA_PERMISSION_EXTENSION_PYTHON.md  API_FIRST_PERMISSION_DESIGN_PYTHON.md  LIGHTWEIGHT_DOMAIN_EVENTS_AND_OWNSONE_DESIGN.md  STATE_MACHINE_V2_AND_DOMAIN_EVENTS_REVISION_CHECKLIST.md  STATE_MACHINE_V2_DESIGN.md
docs/: 02_config_guide.md  03_orm_guide.md  04_log_guide.md  05_exception_handling.md  06_auth_guide.md  08_permission_guide.md  11_cache_guide.md  12_model_registry_guide.md  13_ip_access_control_guide.md  orm_commit_suppression_mechanism.md  scheduler_design.md
docs/orm_docs/: 01_overview.md  02_model_definition.md  03_relationships.md  10_history.md  11_transaction.md  14_schema_validation.md  16_transaction_manager.md  17-tree-structure-guide.md  19-state-machine-guide.md
docs/webapi_development_standards/: api_layer_design_guide.md  development_guide.md  dto_response_guide.md
examples/organization/: demo_org_factory.py
examples/orm/: debug_versioning.py  demo_foreign_key_field.py  demo_pk_strategy_priority.py  demo_primary_key_types.py  demo_protect_debug.py  demo_transaction_manager.py
examples/orm/demo_custom_transaction/: demo_custom_transaction_scenario2.py  demo_custom_transaction_scenario3.py  demo_custom_transaction_scenario4.py
examples/permission/: demo_cache.py
test_env/: pyvenv.cfg
tests/: conftest.py
tests/helpers/: permission_helpers.py
tests/test_auth/: test_api_key.py  test_audit.py  test_auth_api_routes_extra_edgecases.py  test_ldap_extra.py  test_mfa.py  test_mfa_extra_more.py  test_models_extra.py  test_oauth2.py  test_oauth2_provider_oidc_extra.py  test_rate_limiter_validators_extra.py  test_token_store.py
tests/test_cache/: __init__.py  test_clear_listened_models_bug.py  test_decorators_extra.py  test_setup_listeners_bug.py
tests/test_config/: test_settings.py
tests/test_exceptions/: README.md  test_exceptions.py  test_handlers.py  test_integration.py
tests/test_log/: __init__.py  test_handlers_extra_more.py
tests/test_middleware/: test_ip_access.py  test_request_logging.py
tests/test_organization/: __init__.py  test_api_extra_more.py  test_models_factory_extra_more.py  test_org_sync_services_extra_targeted.py  test_services_sync_extra_more.py  test_sync_service_extra_deep.py  test_sync_service_extra_more_more.py
tests/test_orm/: __init__.py
tests/test_orm/integration/: test_cascade_soft_delete_integration.py  test_connection_pool.py
tests/test_orm/unit/: test_auto_history.py  test_base_model_version.py  test_cascade_soft_delete.py  test_core_model_extra_more.py  test_current_user_tracking.py  test_pk_foreign_key.py  test_pk_strategy_history.py  test_soft_delete.py  test_sortable_mixin.py  test_taggable_mixin.py  test_tree_mixin.py
tests/test_permission/: __init__.py  test_types.py
tests/test_response/: test_base_response.py
tests/test_scheduler/: __init__.py  conftest.py
tests/test_scheduler/integration/: __init__.py  test_api.py  test_integration.py
tests/test_storage/: __init__.py  test_cloud_storage.py  test_local_storage.py  test_multipart.py
tests/test_utils/: test_file_size.py  test_ip.py
tests/test_validators/: test_constraints_extra_more.py
tmp_docs/: ENTERPRISE_FEATURE_4W_CHECKLIST.md  permission_module_plan.md  权限模块设计文档.md
yweb/: version.py
yweb-core/: .gitignore  README_DEV.md  pyproject.toml  pytest.ini  requirements-dev.txt
yweb-core/docs/: 01_quickstart.md  06_auth_guide.md  07_organization_guide.md  09_scheduler_guide.md  10_storage_guide.md  11_cache_guide.md  14_ratelimit_guide.md  orm_commit_behavior_outside_transaction.md  storage_design.md
yweb-core/examples/: EXAMPLE_GUIDE.md
yweb-core/tests/: __init__.py
yweb-core/yweb/: __init__.py
yweb/auth/: __init__.py  mixins.py  models.py  schemas.py  service.py  setup.py  token_store.py  validators.py
yweb/cache/: __init__.py  backends.py  invalidation.py
yweb/config/: __init__.py  settings.py
yweb/exceptions/: exceptions.py  handlers.py
yweb/middleware/: ip_access.py  request_id.py  request_logging.py
yweb/organization/: enums.py  helpers.py
yweb/orm/: __init__.py  primary_key_config.py  utils.py
yweb/permission/: __init__.py  decorators.py  dependencies.py
yweb/response/: base_response.py
yweb/scheduler/: builder.py  context.py  job.py  models.py  retry.py
yweb/storage/: metrics.py  multipart.py  secure_url.py  validators.py
yweb/utils/: __init__.py  encryption.py  generate_id.py  test_collector.py
yweb/validators/: __init__.py
(+332 files in other folders)
